--- a/fsharp/ML/ML.Regressions/ML.Regressions.fsproj
+++ b/fsharp/ML/ML.Regressions/ML.Regressions.fsproj
@@ -52,7 +52,6 @@
   <Import Project="$(FSharpTargetsPath)" />
   <ItemGroup>
     <Compile Include="AssemblyInfo.fs" />
-    <Compile Include="Utils.fs" />
     <Compile Include="GLM.fs" />
     <Compile Include="LinearRegression.fs" />
     <Compile Include="BatchGradientDescent.fs" />
@@ -80,6 +79,13 @@
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Numerics" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\ML.Core\ML.Core.fsproj">
+      <Name>ML.Core</Name>
+      <Project>{c5fa82ad-173b-4b5c-940b-e6f66819f0b6}</Project>
+      <Private>True</Private>
+    </ProjectReference>
   </ItemGroup>
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
