--- a/fsharp/ML/ML.Regressions/ML.Regressions.fsproj
+++ b/fsharp/ML/ML.Regressions/ML.Regressions.fsproj
@@ -54,6 +54,7 @@
     <Compile Include="AssemblyInfo.fs" />
     <Compile Include="GLM.fs" />
     <Compile Include="LinearRegression.fs" />
+    <Compile Include="LogisticRegression.fs" />
     <Compile Include="BatchGradientDescent.fs" />
     <Compile Include="StochasticGradientDescent.fs" />
     <Compile Include="MiniBatchGradientDescent.fs" />
