--- a/fsharp/ML/ML.Demo/packages.config
+++ b/fsharp/ML/ML.Demo/packages.config
@@ -1,7 +1,10 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="FSharp.Charting" version="0.90.14" targetFramework="net452" />
   <package id="FSharp.Core" version="4.0.0.1" targetFramework="net452" />
+  <package id="Google.DataTable.Net.Wrapper" version="1.0.0" targetFramework="net452" />
   <package id="MathNet.Numerics" version="3.12.0" targetFramework="net452" />
   <package id="MathNet.Numerics.FSharp" version="3.12.0" targetFramework="net452" />
+  <package id="Newtonsoft.Json" version="3.5.8" targetFramework="net452" />
   <package id="PerfUtil" version="0.1.8" targetFramework="net452" />
 </packages>
