--- a/fsharp/ML/ML.Regressions/ML.Regressions.fsproj
+++ b/fsharp/ML/ML.Regressions/ML.Regressions.fsproj
@@ -52,18 +52,19 @@
   <Import Project="$(FSharpTargetsPath)" />
   <ItemGroup>
     <Compile Include="AssemblyInfo.fs" />
+    <Compile Include="Theta.fs" />
     <Compile Include="GLM.fs" />
     <Compile Include="LinearRegression.fs" />
+    <Compile Include="LogisticRegression.fs" />
     <Compile Include="SoftmaxRegression.fs" />
     <Compile Include="GD.fs" />
     <Compile Include="SGD.fs" />
     <Compile Include="NAG.fs" />
-    <Compile Include="Adadelta.fs" />
     <Compile Include="Adagrad.fs" />
+    <Compile Include="Adadelta.fs" />
     <Compile Include="GradientDescent.fs" />
     <Content Include="packages.config" />
     <None Include="README.MD" />
-    <Compile Include="LogisticRegression.fs" />
   </ItemGroup>
   <ItemGroup>
     <Reference Include="FSharp.Core">
