--- a/fsharp/ML/ML.Demo/ML.Demo.fsproj
+++ b/fsharp/ML/ML.Demo/ML.Demo.fsproj
@@ -63,6 +63,7 @@
     <Compile Include="Program.fs" />
     <None Include="App.config" />
     <Content Include="packages.config" />
+    <None Include="README.MD" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\ML.Core\ML.Core.fsproj">
