--- a/fsharp/ML/ML.Demo/packages.config
+++ b/fsharp/ML/ML.Demo/packages.config
@@ -5,6 +5,7 @@
   <package id="Google.DataTable.Net.Wrapper" version="1.0.0" targetFramework="net452" />
   <package id="MathNet.Numerics" version="3.12.0" targetFramework="net452" />
   <package id="MathNet.Numerics.FSharp" version="3.12.0" targetFramework="net452" />
+  <package id="MathNet.Numerics.MKL.Win" version="2.0.0" targetFramework="net452" />
   <package id="Newtonsoft.Json" version="3.5.8" targetFramework="net452" />
   <package id="PerfUtil" version="0.1.8" targetFramework="net452" />
 </packages>
