--- a/fsharp/ML/ML.GDD/ML.DGD.fsproj
+++ b/fsharp/ML/ML.GDD/ML.DGD.fsproj
@@ -59,6 +59,7 @@
     <Compile Include="BatchCoordinatorActor.fs" />
     <Compile Include="DistributedGradientDescent.fs" />
     <Content Include="packages.config" />
+    <None Include="test.fsx" />
   </ItemGroup>
   <ItemGroup>
     <Reference Include="Akka">
