--- a/fsharp/ML/ML.Demo/App.config
+++ b/fsharp/ML/ML.Demo/App.config
@@ -1,6 +1,29 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <configuration>
-    <startup> 
+  <configSections>
+    <section name="akka"
+             type="Akka.Configuration.Hocon.AkkaConfigurationSection, Akka" />
+  </configSections>
+  <startup> 
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5.2" />
-    </startup>
+  </startup>
+  <akka>
+    <hocon>
+      <![CDATA[
+          akka {
+            log-config-on-start = off
+            stdout-loglevel = INFO
+            loglevel = INFO            
+            actor {
+              deployment {          
+                /BatchCoordinatorActor/BatchActor {
+                  router = round-robin-pool
+                  nr-of-instances = 7
+                }
+              }      
+            }
+        }
+      ]]>
+    </hocon>
+  </akka>  
 </configuration>
