--- a/fsharp/ML/ML.Demo/ML.Demo.fsproj
+++ b/fsharp/ML/ML.Demo/ML.Demo.fsproj
@@ -58,6 +58,7 @@
   <ItemGroup>
     <Compile Include="AssemblyInfo.fs" />
     <Compile Include="Linear.fs" />
+    <Compile Include="DLinear.fs" />
     <Compile Include="Logistic.fs" />
     <Compile Include="Softmax.fs" />
     <Compile Include="Program.fs" />
@@ -69,6 +70,11 @@
     <ProjectReference Include="..\ML.Core\ML.Core.fsproj">
       <Name>ML.Core</Name>
       <Project>{c5fa82ad-173b-4b5c-940b-e6f66819f0b6}</Project>
+      <Private>True</Private>
+    </ProjectReference>
+    <ProjectReference Include="..\ML.GDD\ML.DGD.fsproj">
+      <Name>ML.DGD</Name>
+      <Project>{685714b3-718b-4da5-98ef-cc2fdb432a5e}</Project>
       <Private>True</Private>
     </ProjectReference>
     <ProjectReference Include="..\ML.Statistics\ML.Statistics.fsproj">
