--- a/fsharp/ML/ML.Regressions/ML.Regressions.fsproj
+++ b/fsharp/ML/ML.Regressions/ML.Regressions.fsproj
@@ -64,6 +64,7 @@
     <Compile Include="Adagrad.fs" />
     <Compile Include="Adadelta.fs" />
     <Compile Include="GradientDescent.fs" />
+    <Compile Include="NN.fs" />
     <Content Include="packages.config" />
     <None Include="README.MD" />
   </ItemGroup>
@@ -81,6 +82,10 @@
       <Private>True</Private>
     </Reference>
     <Reference Include="mscorlib" />
+    <Reference Include="Streams">
+      <HintPath>..\packages\Streams.0.4.1\lib\net45\Streams.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Numerics" />
