--- a/fsharp/ML/ML.Regressions/packages.config
+++ b/fsharp/ML/ML.Regressions/packages.config
@@ -3,4 +3,5 @@
   <package id="FSharp.Core" version="4.0.0.1" targetFramework="net461" />
   <package id="MathNet.Numerics" version="3.12.0" targetFramework="net452" />
   <package id="MathNet.Numerics.FSharp" version="3.12.0" targetFramework="net452" />
+  <package id="Streams" version="0.4.1" targetFramework="net452" />
 </packages>
