--- a/fsharp/ML/ML.Regressions/ML.GD.fsproj
+++ b/fsharp/ML/ML.Regressions/ML.GD.fsproj
@@ -8,11 +8,11 @@
     <ProjectGuid>0c3ae35c-a191-48b9-8d7f-15c85bbe67d2</ProjectGuid>
     <OutputType>Library</OutputType>
     <RootNamespace>ML.Regressions</RootNamespace>
-    <AssemblyName>ML.Regressions</AssemblyName>
+    <AssemblyName>ML.GD</AssemblyName>
     <TargetFrameworkVersion>v4.5.2</TargetFrameworkVersion>
     <TargetFSharpCoreVersion>4.4.0.0</TargetFSharpCoreVersion>
     <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
-    <Name>ML.Regressions</Name>
+    <Name>ML.GD</Name>
     <TargetFrameworkProfile />
     <NuGetPackageImportStamp>
     </NuGetPackageImportStamp>
@@ -25,7 +25,7 @@
     <OutputPath>bin\Debug\</OutputPath>
     <DefineConstants>DEBUG;TRACE</DefineConstants>
     <WarningLevel>3</WarningLevel>
-    <DocumentationFile>bin\Debug\ML.Regressions.XML</DocumentationFile>
+    <DocumentationFile>bin\Debug\ML.GD.XML</DocumentationFile>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
     <DebugType>pdbonly</DebugType>
@@ -34,7 +34,7 @@
     <OutputPath>bin\Release\</OutputPath>
     <DefineConstants>TRACE</DefineConstants>
     <WarningLevel>3</WarningLevel>
-    <DocumentationFile>bin\Release\ML.Regressions.XML</DocumentationFile>
+    <DocumentationFile>bin\Release\ML.GD.XML</DocumentationFile>
   </PropertyGroup>
   <PropertyGroup>
     <MinimumVisualStudioVersion Condition="'$(MinimumVisualStudioVersion)' == ''">11</MinimumVisualStudioVersion>
