--- a/fsharp/ML/ML.Demo/ML.Demo.fsproj
+++ b/fsharp/ML/ML.Demo/ML.Demo.fsproj
@@ -74,12 +74,12 @@
       <Project>{c5fa82ad-173b-4b5c-940b-e6f66819f0b6}</Project>
       <Private>True</Private>
     </ProjectReference>
-    <ProjectReference Include="..\ML.GDD\ML.DGD.fsproj">
+    <ProjectReference Include="..\ML.DGD\ML.DGD.fsproj">
       <Name>ML.DGD</Name>
       <Project>{685714b3-718b-4da5-98ef-cc2fdb432a5e}</Project>
       <Private>True</Private>
     </ProjectReference>
-    <ProjectReference Include="..\ML.Regressions\ML.GD.fsproj">
+    <ProjectReference Include="..\ML.GD\ML.GD.fsproj">
       <Name>ML.GD</Name>
       <Project>{0c3ae35c-a191-48b9-8d7f-15c85bbe67d2}</Project>
       <Private>True</Private>
