mnist 50 elemnts demo working

--- a/fsharp/ML/ML.Test/ML.Test.fsproj
+++ b/fsharp/ML/ML.Test/ML.Test.fsproj
@@ -58,6 +58,7 @@
     <Content Include="packages.config" />
     <Compile Include="NN.Test.fs" />
     <Compile Include="NN.Calc.Test.fs" />
+    <Compile Include="NN.Utils.fs" />
     <Content Include="App.config" />
   </ItemGroup>
   <ItemGroup>
