--- a/fsharp/ML/ML.Core/packages.config
+++ b/fsharp/ML/ML.Core/packages.config
@@ -1,5 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="Deedle" version="1.2.5" targetFramework="net452" />
   <package id="FSharp.Core" version="4.0.0.1" targetFramework="net452" />
   <package id="MathNet.Numerics" version="3.13.0" targetFramework="net452" />
   <package id="MathNet.Numerics.FSharp" version="3.13.0" targetFramework="net452" />
