--- a/fsharp/ML/ML.Demo/packages.config
+++ b/fsharp/ML/ML.Demo/packages.config
@@ -1,5 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="Deedle" version="1.2.5" targetFramework="net452" />
   <package id="FSharp.Charting" version="0.90.14" targetFramework="net452" />
   <package id="FSharp.Core" version="4.0.0.1" targetFramework="net452" />
   <package id="Google.DataTable.Net.Wrapper" version="3.1.2.0" targetFramework="net452" />
