--- a/fsharp/ML/ML.AnomalyDetection/ML.AnomalyDetection.fsproj
+++ b/fsharp/ML/ML.AnomalyDetection/ML.AnomalyDetection.fsproj
@@ -53,6 +53,7 @@
     <Compile Include="AssemblyInfo.fs" />
     <Compile Include="ML.AnomalyDetection.fs" />
     <Content Include="packages.config" />
+    <None Include="test.fsx" />
   </ItemGroup>
   <ItemGroup>
     <Reference Include="Deedle">
@@ -80,8 +81,6 @@
     <Reference Include="System.Core" />
     <Reference Include="System.Data" />
     <Reference Include="System.Numerics" />
-  </ItemGroup>
-  <ItemGroup>
     <ProjectReference Include="..\ML.Core\ML.Core.fsproj">
       <Name>ML.Core</Name>
       <Project>{c5fa82ad-173b-4b5c-940b-e6f66819f0b6}</Project>
