--- a/fsharp/ML/ML.Core/ML.Core.fsproj
+++ b/fsharp/ML/ML.Core/ML.Core.fsproj
@@ -56,6 +56,7 @@
     <Compile Include="LinearAlgebra.fs" />
     <Compile Include="Readers.fs" />
     <Content Include="packages.config" />
+    <Compile Include="Statistics.fs" />
   </ItemGroup>
   <ItemGroup>
     <Reference Include="Deedle">
