--- a/fsharp/ML/ML.Test/ML.Test.fsproj
+++ b/fsharp/ML/ML.Test/ML.Test.fsproj
@@ -60,6 +60,7 @@
     <Compile Include="NN.Calc.Test.fs" />
     <Compile Include="NN.Utils.Tests.fs" />
     <Compile Include="Core.IO.Tests.fs" />
+    <Compile Include="Core.Statistics.Tests.fs" />
     <Content Include="App.config" />
   </ItemGroup>
   <ItemGroup>
