clalc batch norm

--- a/fsharp/ML/ML.Core/ML.Core.fsproj
+++ b/fsharp/ML/ML.Core/ML.Core.fsproj
@@ -57,6 +57,7 @@
     <Compile Include="Readers.fs" />
     <Content Include="packages.config" />
     <Compile Include="Statistics.fs" />
+    <Compile Include="Normalization.fs" />
   </ItemGroup>
   <ItemGroup>
     <Reference Include="Deedle">
