--- a/fsharp/ML/ML.Test/ML.Test.fsproj
+++ b/fsharp/ML/ML.Test/ML.Test.fsproj
@@ -61,6 +61,7 @@
     <Compile Include="NN.Calc.Test.fs" />
     <Compile Include="NN.Utils.Tests.fs" />
     <Compile Include="Core.IO.Tests.fs" />
+    <Compile Include="NN.ReshapeNN.Test.fs" />
     <Content Include="App.config" />
     <Compile Include="Core.Distr.Tests.fs" />
   </ItemGroup>
