--- a/fsharp/ML/ML.Test/ML.Test.fsproj
+++ b/fsharp/ML/ML.Test/ML.Test.fsproj
@@ -61,10 +61,11 @@
     <Compile Include="NN.Calc.Test.fs" />
     <Compile Include="NN.Utils.Tests.fs" />
     <Compile Include="Core.IO.Tests.fs" />
-    <Compile Include="NN.GetInitialTheta.Test.fs" />
+    <Compile Include="NN.Forward.Test.fs" />
     <Content Include="App.config" />
     <Compile Include="Core.Distr.Tests.fs" />
     <Compile Include="NN.ReshapeNN.Test.fs" />
+    <Compile Include="NN.GetInitialTheta.Test.fs" />
   </ItemGroup>
   <ItemGroup>
     <Reference Include="FsCheck">
