--- a/fsharp/ML/ML.Test/ML.Test.fsproj
+++ b/fsharp/ML/ML.Test/ML.Test.fsproj
@@ -56,6 +56,7 @@
   <ItemGroup>
     <Compile Include="AssemblyInfo.fs" />
     <Content Include="packages.config" />
+    <Compile Include="NN.Backprop.Embed.Test.fs" />
     <Compile Include="Core.Batch.Statistics.Tests.fs" />
     <Compile Include="NN.Test.fs" />
     <Compile Include="NN.Calc.Test.fs" />
